# MyFTP-EPI-2017-2018

./: CMakeLists.txt  Makefile  get_next_line.c  main.c  main_server.c  socket.c
client_server/: client_server.c  custom_split.c  read_and_interpret.c  str_replace.c
client_server/key_fct/: cdup.c  cwd.c  dele.c  help.c  list.c  noop.c  pass.c  pasv.c  port.c  pwd.c  quit.c  retr.c  stor.c  transfer_thread_functions.c  unknown.c  user.c
communication/: communication.c  socket.c
include/: get_next_line.h  my_ftp.h  socket_lib.h
libs/socket/: count_the_place.c  create_socket.c  error.c  protocol.c  set_sockaddr_in.c
main_server/: main_server.c
